--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,7 @@ transformers
 runpod
 soundfile
 
-torch==2.3.1+cu121
-torchaudio==2.3.1+cu121
---extra-index-url https://download.pytorch.org/whl/cu121
+torch==2.5.1 torchaudio==2.5.1 --extra-index-url https://download.pytorch.org/whl/cu121
 
-numpy>=1.26
+numpy==1.26.4
 accelerate
