--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ transformers
 runpod
 soundfile
 
-torch==2.5.1 torchaudio==2.5.1 --extra-index-url https://download.pytorch.org/whl/cu121
+torch==2.5.1
+torchaudio==2.5.1
+--extra-index-url https://download.pytorch.org/whl/cu121
 
 numpy==1.26.4
 accelerate
