--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ soundfile
 torch==2.5.1
 torchaudio==2.5.1
 --extra-index-url https://download.pytorch.org/whl/cu121
+librosa
 
 numpy==1.26.4
 accelerate
