Update: ignore파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -223,6 +223,6 @@ $RECYCLE.BIN/
 *.m4a
 *.mp3
 
-
+input_test.py
 
 # End of https://www.toptal.com/developers/gitignore/api/python,windows,visualstudiocode
