--- a/.gitignore
+++ b/.gitignore
@@ -224,5 +224,6 @@ $RECYCLE.BIN/
 *.mp3
 
 input_test.py
+selenium_text.py
 
 # End of https://www.toptal.com/developers/gitignore/api/python,windows,visualstudiocode
